# quarksum

./: .gitignore  BASELINE_BOOKMARK.md  CLAUDE.md  README.md  attribution_timeline.json  golden_vase.html  gyroscope.jsx  milky_way.json  nbody_benchmark.json  nbody_shootout.html  push_render_coffee_mug.ppm  pyproject.toml  render_gallery.html  run_all_tests.py  run_falsification_tests.py  simulate_double_slit.py  simulate_double_slit_3d.py  steel_bar_tip.jsx  string_theory_vs_ssbm.md  summary.py  test_double_slit_predictions.py  wobbly_bodies.html
.claude/: settings.local.json
MatterShaper/: generate_pane_viewer.py  nagatha_run.sh  render_beercan.py  render_coffee_v2.py  render_coffee_v3.py  render_copper_cube.py  render_from_maps.py  render_gemstone_showcase.py  render_light_sources.py  render_lightbulb.py  render_photometric_scene.py  render_physics_showcase.py  render_push_test.py  render_shadow_demo.py  render_skippy.py  simulate_dam_break.py  simulate_dam_break_sph.py  simulate_orrery.py  simulate_water_glass.py  simulate_water_pane.py  test_bh_deviation.py  test_bounce_physics.py  test_physics_library.py
examples/: 01_gold_ring_inventory.py  02_water_bottle_hierarchy.py  03_car_battery_checksum.py  04_earths_layers_apply.py  05_solar_system_full_dump.py
local_library/: __init__.py  constants.py  entanglement.py  render.py  sandbox.py  shape_budget.py
misc/: SESSION_LOG.md  SUMMARY.md  double_slit_burst.html  double_slit_interactive.html
quarksum/: Dockerfile  MANIFEST.in  MatterShaper_Patent_Candidates.xlsx  __init__.py  __main__.py  defaults.py  longbow_draw.jsx  nbody_benchmark.html  physics.py  resolver.py  run_all_tests.py
quarksum/Materia/: startup.sh
sgphysics/: __init__.py  constants.py
tests/: test_api_coverage.py  test_checksum.py  test_cli.py  test_defaults.py  test_reference_validation.py
theory/: journal.md  outline.md  plot_gw150914.py  run_entropy_recycling.py  run_mass_sweep.py  run_sanity_audit.py  tangent_check.py
(+375 files in other folders)
